# rusty-mermaid

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  list_algorithms.md  plan.md  review.md  tree_algorithms.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: constants.rs  curve.rs  font_fallback.rs  force_layout.rs  geometry.rs  lib.rs  marker_shapes.rs  renderer.rs  scene.rs  shape.rs  style.rs  text.rs  types.rs
crates/dagre/: Cargo.toml
crates/dagre/src/: border_segments.rs  config.rs  coord_system.rs  labels.rs  lib.rs  nesting.rs  normalize.rs  parent_dummy_chains.rs  pipeline.rs  self_edges.rs  util.rs
crates/dagre/src/acyclic/: dfs_fas.rs  greedy_fas.rs  mod.rs
crates/dagre/src/order/: barycenter.rs  cross_count.rs  init_order.rs  mod.rs  resolve_conflicts.rs  sort_subgraph.rs
crates/dagre/src/position/: bk.rs  mod.rs
crates/dagre/src/rank/: feasible_tree.rs  longest_path.rs  mod.rs  network_simplex.rs
crates/dagre/tests/: golden_dagre.rs  proptest_dagre.rs
crates/diagrams/: Cargo.toml
crates/diagrams/proptest-regressions/flowchart/: bridge.txt  mod.txt
crates/diagrams/src/: lib.rs  lib_tests.rs
crates/diagrams/src/architecture/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/block/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/c4/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/class/: bridge.rs  bridge_tests.rs  ir.rs  mod.rs  parse_relations.rs  parser.rs  parser_tests.rs
crates/diagrams/src/common/: error.rs  layout.rs  mod.rs  palette.rs  rendering.rs  rendering_tests.rs  styling.rs  test_helpers.rs  tokens.rs  tokens_tests.rs
crates/diagrams/src/er/: bridge.rs  ir.rs  mod.rs  parser.rs  parser_tests.rs
crates/diagrams/src/flowchart/: bridge.rs  bridge_tests.rs  ir.rs  mod.rs  parser.rs  parser_tests.rs  render_tests.rs
crates/diagrams/src/gantt/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/gitgraph/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/ishikawa/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/journey/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/kanban/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/mindmap/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/packet/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/pie/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/quadrant/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/radar/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/requirement/: bridge.rs  ir.rs  mod.rs  parser.rs  parser_tests.rs
crates/diagrams/src/sankey/: ir.rs  mod.rs  parser.rs  render_tests.rs
crates/diagrams/src/sequence/: ir.rs  ir_tests.rs  layout.rs  layout_pass.rs  layout_tests.rs  mod.rs  parser.rs  parser_tests.rs  render_tests.rs
crates/diagrams/src/state/: bridge.rs  bridge_tests.rs  center.rs  clip.rs  ir.rs  mod.rs  parser.rs  parser_tests.rs  render_tests.rs  scope.rs
crates/diagrams/src/timeline/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/treemap/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/treeview/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/venn/: ir.rs  mod.rs  parser.rs
crates/diagrams/src/xychart/: ir.rs  mod.rs  parser.rs
crates/diagrams/tests/: e2e_svg.rs  ir_assertions.rs  layout_golden_mmd.rs  layout_invariants.rs  parse_golden_mmd.rs  proptest_scenes.proptest-regressions  proptest_scenes.rs  scene_invariants.rs  structural_fingerprints.rs  svg_golden.rs  visual_gallery.rs
crates/excalidraw/: Cargo.toml
crates/excalidraw/src/: convert.rs  element.rs  lib.rs
crates/gpui-backend/: Cargo.toml
crates/gpui-backend/src/: lib.rs  paint.rs
crates/graph/: Cargo.toml
crates/graph/src/: graph.rs  id.rs  lib.rs  traversal.rs
crates/raster/: Cargo.toml
crates/raster/src/: lib.rs  primitive.rs
crates/rusty-mermaid/: Cargo.toml
crates/rusty-mermaid/src/: lib.rs
crates/svg/: Cargo.toml
crates/svg/src/: document.rs  lib.rs  markers.rs  path.rs  primitive.rs  style.rs
crates/viewport/: Cargo.toml
crates/viewport/src/: lib.rs
crates/wgpu-backend/: Cargo.toml
crates/wgpu-backend/src/: lib.rs  scene_builder.rs
crates/wgpu-backend/tests/: font_advance.rs  font_coverage.rs  gpu_gallery.rs  single_render.rs
docs/: architecture.md  gallery.html  syntax-guide.md  testing.md
docs/gallery/: architecture.html  block.html  c4.html  class.html  er.html  flowchart_part1.html  flowchart_part2.html  flowchart_part3.html  gantt.html  gitgraph.html  index.html  ishikawa.html  journey.html  kanban.html  mindmap.html  packet.html  pie.html  quadrant.html  radar.html  requirement.html  sankey.html  sequence.html  state.html  timeline.html  treemap.html  treeview.html  venn.html  xychart.html
docs/render-docs-crate/: Cargo.toml
docs/render-docs-crate/src/: main.rs
examples/gpui-gallery/: Cargo.toml
examples/gpui-gallery/src/: main.rs
examples/wasm-gallery/: Cargo.toml  build.rs
examples/wasm-gallery/src/: lib.rs
examples/wasm-gallery/www/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: architecture_parse.rs  block_parse.rs  c4_parse.rs  class_parse.rs  dagre_layout.rs  er_parse.rs  flowchart_parse.rs  force_layout.rs  gantt_parse.rs  gitgraph_parse.rs  graph_ops.rs  ishikawa_parse.rs  journey_parse.rs  kanban_parse.rs  mindmap_parse.rs  packet_parse.rs  pie_parse.rs  quadrant_parse.rs  radar_parse.rs  requirement_parse.rs  sankey_parse.rs  sequence_parse.rs  state_parse.rs  timeline_parse.rs  treemap_parse.rs  treeview_parse.rs  venn_parse.rs  xychart_parse.rs
tests/golden/: generate.js
tests/golden/expected/: compiler_pipeline.json  compound_simple.json  crossing.json  cycle_3.json  diamond.json  disconnected.json  edge_label.json  html_labels.json  linear_3.json  linear_bt.json  linear_lr.json  linear_rl.json  long_edge.json  mcp_server.json  minlen.json  mixed_sizes.json  nested_compound.json  realistic_flowchart.json  self_loop.json  single_node.json  weighted.json
tests/golden/fingerprints/: all_shapes.json  arch_api_gateway.json  arch_auth_flow.json  arch_caching_layers.json  arch_cicd_pipeline.json  arch_cloud_aws.json  arch_cloud_k8s.json  arch_component.json  (+157 more)
tests/visual/: gallery.html
(+300 files in other folders)
