[workspace]
members = [
    "crates/core",
    "crates/graph",
    "crates/dagre",
    "crates/diagrams",
    "crates/svg",
    "crates/viewport",
    "crates/raster",
    "crates/gpui-backend",
    "crates/wgpu-backend",
]
# GPU backends pull heavy platform deps — exclude from default workspace builds
# Build individually: cargo check -p rusty-mermaid-wgpu / cargo check -p rusty-mermaid-gpui
exclude = ["examples/wasm-gallery"]
default-members = [
    "crates/core",
    "crates/graph",
    "crates/dagre",
    "crates/diagrams",
    "crates/svg",
    "crates/viewport",
    "crates/raster",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
rusty-mermaid-core = { path = "crates/core" }
rusty-mermaid-graph = { path = "crates/graph" }
rusty-mermaid-dagre = { path = "crates/dagre" }
rusty-mermaid-diagrams = { path = "crates/diagrams" }
rusty-mermaid-svg = { path = "crates/svg" }
rusty-mermaid-viewport = { path = "crates/viewport" }
rusty-mermaid-raster = { path = "crates/raster" }
rusty-mermaid-gpui = { path = "crates/gpui-backend" }
rusty-mermaid-wgpu = { path = "crates/wgpu-backend" }
thiserror = "2"

# Fast debug builds - optimize for compile speed
[profile.dev]
opt-level = 0                # No optimization (fastest compile)
debug = "line-tables-only"   # Minimal debug info (line numbers in backtraces)
incremental = true           # Incremental compilation

# Optimize dependencies even in debug (faster test execution)
[profile.dev.package."*"]
opt-level = 1                # Light optimization for deps only

# Maximum optimization release builds
[profile.release]
opt-level = 3                # Maximum optimization
lto = "fat"                  # Full LTO for best runtime performance
codegen-units = 1            # Single codegen unit for best optimization
panic = "abort"              # No unwinding overhead
strip = true                 # Remove debug symbols
