[package]
name = "rusty-mermaid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared types, geometry, drawing primitives, and traits"

[dependencies]

[dev-dependencies]
proptest = "1"
