[package]
name = "rusty-mermaid-dagre"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sugiyama layered graph layout engine (dagre port)"

[dependencies]
rusty-mermaid-core.workspace = true
rusty-mermaid-graph.workspace = true

[dev-dependencies]
proptest = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
