[package]
name = "rusty-mermaid-diagrams"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "All diagram types: parse + layout → Scene"

[features]
default = ["flowchart", "state", "sequence", "class", "er", "requirement", "pie", "timeline", "kanban", "gantt", "gitgraph", "xychart", "mindmap", "sankey", "packet", "quadrant", "venn", "radar", "user-journey", "treeview", "ishikawa", "treemap", "block", "c4"]
# Graph-based (use dagre)
flowchart = ["dep:rusty-mermaid-graph", "dep:rusty-mermaid-dagre"]
state = ["dep:rusty-mermaid-graph", "dep:rusty-mermaid-dagre"]
class = ["dep:rusty-mermaid-graph", "dep:rusty-mermaid-dagre"]
er = ["dep:rusty-mermaid-graph", "dep:rusty-mermaid-dagre"]
requirement = ["dep:rusty-mermaid-graph", "dep:rusty-mermaid-dagre"]
mindmap = []
# Non-graph (custom layout, no dagre dependency)
sequence = []
gantt = []
pie = []
sankey = []
gitgraph = []
timeline = []
xychart = []
kanban = []
architecture = []
block = []
c4 = []
ishikawa = []
packet = []
quadrant = []
radar = []
treemap = []
treeview = []
user-journey = []
venn = []

[dependencies]
rusty-mermaid-core.workspace = true
rusty-mermaid-graph = { workspace = true, optional = true }
rusty-mermaid-dagre = { workspace = true, optional = true }
thiserror.workspace = true
winnow = "0.7.15"

[dev-dependencies]
proptest = "1.10.0"
rusty-mermaid-svg.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
