[package]
name = "rusty-mermaid-excalidraw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Excalidraw rendering backend: Scene → editable .excalidraw JSON"

[dependencies]
rusty-mermaid-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rusty-mermaid-diagrams.workspace = true
