[package]
name = "rusty-mermaid-raster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raster (PNG) rendering backend for rusty-mermaid diagrams"

[dependencies]
rusty-mermaid-core = { workspace = true }
tiny-skia = "0.11"
png = "0.17"

[dev-dependencies]
proptest = "1"
