[package]
name = "rusty-mermaid-raster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Raster (PNG) rendering backend for rusty-mermaid diagrams"

[dependencies]
rusty-mermaid-core = { workspace = true }
tiny-skia = "0.11"
png = "0.17"
fontdue = "0.9"

[dev-dependencies]
proptest = "1"
rusty-mermaid-diagrams = { workspace = true }
