[package]
name = "rusty-mermaid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Mermaid diagram rendering in pure Rust — parse, layout, and render to SVG/PNG/GPU"

[dependencies]
# Always available: parse → Scene, types, theme
rusty-mermaid-core = { workspace = true }
rusty-mermaid-diagrams = { workspace = true }

# Opt-in backends
rusty-mermaid-svg = { workspace = true, optional = true }
rusty-mermaid-excalidraw = { workspace = true, optional = true }
rusty-mermaid-raster = { workspace = true, optional = true }
rusty-mermaid-viewport = { workspace = true, optional = true }

# Opt-in layout algorithms (dagre brings graph + core transitively)
rusty-mermaid-dagre = { workspace = true, optional = true }

# GPU backends — not published to crates.io, use path deps directly
# rusty-mermaid-wgpu = { workspace = true, optional = true }
# rusty-mermaid-gpui = { workspace = true, optional = true }

[features]
default = []
svg = ["dep:rusty-mermaid-svg"]
excalidraw = ["dep:rusty-mermaid-excalidraw"]
raster = ["dep:rusty-mermaid-raster"]
viewport = ["dep:rusty-mermaid-viewport"]
# Generic graph layout: the dagre prelude + the force-directed layout, for a
# consumer that lays out its own graphs (not just mermaid diagrams).
layout = ["dep:rusty-mermaid-dagre"]
