[package]
name = "rusty-mermaid-svg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SVG rendering backend: Scene → SVG string"

[dependencies]
rusty-mermaid-core.workspace = true
