[package]
name = "rusty-mermaid-viewport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared viewport state, coordinate transforms, and event abstraction for interactive backends"

[dependencies]
rusty-mermaid-core = { workspace = true }

[dev-dependencies]
proptest = "1"
