[package]
name = "rusty-mermaid-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wgpu/vello GPU rendering backend for rusty-mermaid diagrams"

[dependencies]
rusty-mermaid-core = { workspace = true }
rusty-mermaid-viewport = { workspace = true }
vello = "0.8"
wgpu = "28"
skrifa = "0.40"
rustybuzz = "0.20"

png = "0.17"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
rusty-mermaid-diagrams = { workspace = true }
