[package]
name = "rusty-mermaid-wasm-gallery"
version = "0.1.0"
edition = "2024"
publish = false
description = "WASM demo: live vello/WebGPU diagram gallery in the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusty-mermaid-core = { path = "../../crates/core" }
rusty-mermaid-diagrams = { path = "../../crates/diagrams" }
rusty-mermaid-wgpu = { path = "../../crates/wgpu-backend" }
rusty-mermaid-viewport = { path = "../../crates/viewport" }
vello = "0.8"
wgpu = "28"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlCanvasElement", "HtmlSelectElement",
    "CssStyleDeclaration", "DomTokenList",
    "Window", "Navigator", "Gpu", "console",
] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
